# task-tracker

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DESIGN_PATTERNS.md  ESTIMATION.md  REFACTORING_REPORT.md  TDD_EVIDENCE.md  TEST_PLAN.md
src/: main.py
src/cli/: commands.py
src/models/: task.py
src/patterns/: command.py  factory.py  observer.py  strategy.py
src/services/: export_service.py  task_service.py
src/storage/: json_storage.py
tests/: test_acceptance.py  test_export.py  test_patterns.py  test_task.py  test_task_service.py
